# terminal-tetris

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
src/tetris/: __init__.py  __main__.py
src/tetris/core/: app.py  bag.py  board.py  constants.py  game.py  highscores.py  keys.py  piece.py  rotation.py  rules.py  scoring.py
src/tetris/ui/: input.py  renderer.py  screens.py
tests/: test_app.py  test_board.py  test_game.py  test_highscores.py  test_input.py  test_piece.py  test_renderer.py  test_rotation.py  test_rules.py  test_scoring.py  test_screens.py
