[project]
name = "terminal-tetris"
version = "0.0.1"
description = "A modern + classic Tetris for the terminal — pure-Python core, zero runtime dependencies"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Huseyin Eryilmaz" }]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
tetris = "tetris.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tetris"]

[tool.pyright]
# The input layer deliberately touches both Unix-only (termios, tty) and
# Windows-only (msvcrt) modules, guarded at runtime by a platform check.
# Analysing as Linux keeps the Unix branch honest; the msvcrt branch is
# silenced where it is used.
pythonPlatform = "Linux"
reportAttributeAccessIssue = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/tetris"]
# The terminal shell is exercised by hand (it needs a real TTY);
# coverage tracks the pure game core.
omit = ["src/tetris/ui/*", "src/tetris/__main__.py"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
